Cleaned up the description of Issues. The timestamp now only is visible after you enlarged the description

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -348,4 +348,10 @@ ul.connectedSortable {
       float: left;
     }
   }
+  p{
+    min-height: 39px;
+  }
+  .timestamp {
+    min-height: 10px;
+  }
 }
